Bug 1557304 - “About:welcome” cards overlapping issue with the browser resized to minimum width. r=emcminn,k88hudson a=RyanVM
Differential Revision: https://phabricator.services.mozilla.com//D39109

--- a/browser/components/newtab/content-src/asrouter/templates/Trailhead/_Trailhead.scss
+++ b/browser/components/newtab/content-src/asrouter/templates/Trailhead/_Trailhead.scss
@@ -264,7 +264,6 @@
 
 .trailheadCards {
   background: var(--trailhead-cards-background-color);
-  max-height: 1000px;
   overflow: hidden;
   text-align: center;
   transition: max-height 0.5s $photon-easing;
